# backseat-signed

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: apt.rs  args.rs  buildinfo.rs  chksums.rs  compression.rs  errors.rs  lib.rs  main.rs  pgp.rs  pkgbuild.rs  plumbing.rs  rpm.rs
tests/: integration.rs
tests/data/: debian-archive-bookworm-automatic.asc  kpcyrd.asc
tests/data/cmatrix/: PKGBUILD  cmatrix-2.0-3-x86_64.pkg.tar.zst  cmatrix-2.0-3-x86_64.pkg.tar.zst.sig  cmatrix-2.0-9.fc40.src.rpm
tests/data/vim/: Release  Release.gpg  Sources  Sources.lz4  Sources.xz  vim_9.1.0199.orig.tar.xz
